<resources>
    <string name="app_name">Week1</string>
    <string name="textview_header">TextView Header</string>
    <string name="textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="textview4">TextView4</string>
    <string name="textview5">TextView5</string>
    <string name="textview_footer">TextView Footer</string>
    <string name="next">Next</string>
    <string name="line1">Hi. My name is Izzaz!</string>
    <string name="text1">Hi. My name is Izzaz.</string>
    <string name="text2">My age is :</string>
    <string name="text3">Here is a list of my favourite dogs :</string>


</resources>
