<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/text1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="230dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/text3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.072" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.486"
        tools:text="Enter Age" />
</androidx.constraintlayout.widget.ConstraintLayout>
